--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,10 @@
         "utility": "cpp",
         "vector": "cpp",
         "__tree": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "deque": "cpp",
+        "stack": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp"
     }
 }
